applications/__tests__/__snapshots__/e2e.test.js.snap
// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bundle > do not add schemas if there is no x-type 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              examples:
                Test:
                  value:
                    Simple: some string
components: {}
"
`;

exports[`lint > lints x-openapi.yaml 1`] = `
"validating applications/outputs/x-openapi.yaml...
[1] applications/outputs/x-openapi.yaml:120:10 at #/components/x-types/Foo

Expected type \`XTypeObject\` (object) but got \`string\`

118 | components:
119 |   x-types:
120 |     Foo: number
    |          ^^^^^^
121 |     Bar:
122 |       somekey:

referenced from applications/outputs/x-openapi.yaml:26:19 at #/paths/~1test/get/responses/200/content/application~1json/x-type/Ref 

Error was generated by the spec rule.


[2] applications/outputs/x-openapi.yaml:46:23 at #/paths/~1test/get/responses/200/content/application~1json/examples/Test/value/RefObject/foo

Example value must conform to the schema: \`RefObject\` property must NOT have additional properties \`foo\`.

44 | Ref: 42
45 | RefObject:
46 |   foo: not expected here
   |   ^^^
47 |   somekey: 42.1
48 |   string: number

referenced from applications/outputs/x-openapi.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


applications/outputs/x-openapi.yaml: validated in <test>ms

❌ Validation failed with 2 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > lints x-openapi-with-refs.yaml 1`] = `
"validating applications/outputs/x-openapi-with-refs.yaml...
[1] applications/outputs/x-openapi-with-refs.yaml:103:10 at #/components/x-types/Foo

Expected type \`XTypeObject\` (object) but got \`string\`

101 | components:
102 |   x-types:
103 |     Foo: any
    |          ^^^
104 |

referenced from applications/outputs/x-openapi-with-refs.yaml:15:19 at #/paths/~1test/get/responses/200/content/application~1json/x-type/AFieldWithRegularRef 

Error was generated by the spec rule.


[2] applications/outputs/x-openapi-with-refs.yaml:25:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'AFieldWithRegularRef'.

23 |   Incorrect:
24 |     value:
25 |       NonExistingField: wrong
   |       ^^^^^^^^^^^^^^^^^^^^^^^
26 | schema:
27 |   type: object

referenced from applications/outputs/x-openapi-with-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/outputs/x-openapi-with-refs.yaml:25:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'AFieldWithInlineRef'.

23 |   Incorrect:
24 |     value:
25 |       NonExistingField: wrong
   |       ^^^^^^^^^^^^^^^^^^^^^^^
26 | schema:
27 |   type: object

referenced from applications/outputs/x-openapi-with-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/outputs/x-openapi-with-refs.yaml:25:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/NonExistingField

Example value must conform to the schema: must NOT have additional properties \`NonExistingField\`.

23 |   Incorrect:
24 |     value:
25 |       NonExistingField: wrong
   |       ^^^^^^^^^^^^^^^^
26 | schema:
27 |   type: object

referenced from applications/outputs/x-openapi-with-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[5] applications/outputs/x-openapi-with-refs.yaml:75:26 at #/paths/~1test/get/responses/202/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: type must be number.

73 |     value: 42
74 |   Incorrect:
75 |     value: false
   |            ^^^^^
76 | schema:
77 |   type: number

referenced from applications/outputs/x-openapi-with-refs.yaml:70:15 at #/paths/~1test/get/responses/202/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[6] applications/outputs/x-openapi-with-refs.yaml:84:19 at #/paths/~1test/get/responses/404/content/application~1json/x-type/AWrongRef

Can't resolve $ref: ENOENT: no such file or directory '/Users/andrewtatomyr/Personal/json-types/applications/outputs/wrong-file.yaml'

82 | x-type:
83 |   AWrongRef:
84 |     $ref: wrong-file.yaml
   |     ^^^^^^^^^^^^^^^^^^^^^
85 | example:
86 |   AWrongRef: Accepts anything

Error was generated by the no-unresolved-refs rule.


applications/outputs/x-openapi-with-refs.yaml: validated in <test>ms

❌ Validation failed with 6 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;
